update sahar bioi

--- a/src/pages/involve.astro
+++ b/src/pages/involve.astro
@@ -133,8 +133,8 @@ const metadata = {
     title="Board of Directors"
     testimonials={[
       {
-        testimonial: `Sahar is a seasoned professional with over two decades of experience in business and finance and a passionate advocate for community health and wellness. As the CEO of Sauga Wellness Foundation, she leads with a vision of creating accessible and equitable health and wellness opportunities for all, particularly for marginalized and racialized communities.
-With a degree in Commerce and Economics and two decades of experience as a community activist and volunteer, Sahar has cultivated a deep understanding of how to drive meaningful change. As a Registered Holistic Nutritionist, she specializes in supporting individuals in addressing hormonal imbalances, anxiety, insomnia, digestive challenges, and burnout through safe and effective natural therapies. Her passion for empowering individuals and organizations through holistic care is matched by her commitment to fostering resilient, thriving communities.Under Sahar's leadership, Sauga Wellness Foundation is dedicated to breaking down barriers to health and wellness, promoting advocacy, and nurturing sustainable well-being for all.`,
+        testimonial: `Sahar is a seasoned professional with a degree in Commerce and Economics and over two decades of experience in business and finance. She is a passionate advocate for community health and wellness. She leads with a vision of creating accessible and equitable health and wellness opportunities for all, particularly for marginalized and racialized communities.
+ As a Registered Holistic Nutritionist, she specializes in supporting individuals in addressing hormonal imbalances, anxiety, insomnia, digestive challenges, and burnout through safe and effective natural therapies. Her passion for empowering individuals and organizations through holistic care is matched by her commitment to fostering resilient, thriving communities.`,
         name: 'Sahar Salman',
         job: 'Chief Executive Officer | Registered Holistic Nutritionist',
         image: {
