--- a/src/pages/involve.astro
+++ b/src/pages/involve.astro
@@ -154,7 +154,7 @@ A passionate advocate for health equity, Shimaa is dedicated to leading impactfu
         },
       },
       {
-        testimonial: `Dr. Saman Husain is a licensed Naturopathic Doctor (ND) based in Ontario, specializing in hormonal and digestive health. With a holistic, evidence-based approach, she empowers individuals to take control of their well-being by addressing the root causes of health concerns and fostering sustainable, healthy lifestyles.
+        testimonial: `Dr. Saman Husain is a licensed Naturopathic Doctor (ND) based in Ontario, focusing in metabolic and mental health. With a holistic, evidence-based approach, she empowers individuals to take control of their well-being by addressing the root causes of health concerns and fostering sustainable, healthy lifestyles.
 
 A passionate advocate for health equity and accessibility, Dr. Husain is committed to breaking down barriers to wellness. She works tirelessly to ensure that individuals from all backgrounds have access to the knowledge and resources needed to lead healthier, more fulfilling lives. Through her dedication to preventive care and inclusivity, Dr. Husain strives to create a more equitable approach to holistic health care for all.`,
         name: 'Saman Husain',
