--- a/src/pages/involve.astro
+++ b/src/pages/involve.astro
@@ -160,8 +160,19 @@ A passionate advocate for health equity and accessibility, Dr. Husain is committ
         name: 'Saman Husain',
         job: 'Licensed Naturopathic Doctor | Public Health Advocate',
         image: {
-          src: '~/assets/images/image-4.jpg',
+          src: '~/assets/images/3.png',
           alt: 'Saman Husain Image',
+        },
+      },
+      {
+        testimonial: `Sadia brings a rich background in philosophy and over a decade of community service to her role at Sauga Wellness. With a Master’s degree in Philosophy, she offers deep insight into the social and ethical dimensions of wellness and equity. Her lifelong dedication to volunteerism and community development has made her a trusted and respected figure in grassroots initiatives.
+
+As Director of Community Engagement, Sadia helps Sauga Wellness build meaningful relationships with marginalized communities, ensuring that programming is inclusive, responsive, and rooted in lived experience. Her work strengthens our foundation’s vision of accessible wellness for all.`,
+        name: 'Sadia Amir',
+        job: 'Director of Community Engagement | Board Member',
+        image: {
+          src: '~/assets/images/4.png',
+          alt: 'Sadia Amir Image',
         },
       },
     ]}
