--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,10 +2,17 @@
 import Layout from '~/layouts/Layout.astro';
 import { getHomePermalink } from '~/utils/permalinks';
 
-const title = `Error 404`;
+const metadata = {
+  title: 'Page Not Found (404) - Sauga Wellness Foundation',
+  description: 'The page you are looking for could not be found. Visit our homepage to explore Sauga Wellness Foundation\'s community health programs and wellness services in Mississauga.',
+  robots: {
+    index: false,
+    follow: true,
+  },
+};
 ---
 
-<Layout metadata={{ title }}>
+<Layout metadata={metadata}>
   <section class="flex items-center h-full p-16">
     <div class="container flex flex-col items-center justify-center px-5 mx-auto my-8">
       <div class="max-w-md text-center">
