--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -112,7 +112,7 @@ const metadata = {
         icon: 'flat-color-icons:voice-presentation',
       },
       {
-        title: 'Financial Wellness and Health Integration Program',
+        title: 'Financial Wellness and Health Integration Program (starting soon  )',
         description:
           'We offer financial wellness workshops to complement physical and mental health services.Many health issues are exacerbated by financial stress, especially in marginalised communities, so providing support on budgeting, managing healthcare costs, and accessing financial aid can be powerful guidance that can help improve many lives.',
         icon: 'flat-color-icons:voice-presentation',
@@ -138,7 +138,7 @@ const metadata = {
     columns={2}
     items={[
       {
-        title: 'Phone: +1 (289) 643-8287',
+        title: 'Phone: +1 (289) 643-3866',
         icon: 'tabler:phone',
       },
       {
