feat: add 48x48 favicon support and update Favicons component

--- a/src/components/Favicons.astro
+++ b/src/components/Favicons.astro
@@ -3,6 +3,7 @@
 import appleTouchIcon from '~/assets/favicons/apple-touch-icon.png';
 import favicon16 from '~/assets/favicons/favicon-16x16.png';
 import favicon32 from '~/assets/favicons/favicon-32x32.png';
+import favicon48 from '~/assets/favicons/favicon-48x48.png';
 ---
 
 <!-- Standard favicon -->
@@ -11,6 +12,7 @@ import favicon32 from '~/assets/favicons/favicon-32x32.png';
 <!-- PNG fallbacks for different sizes -->
 <link rel="icon" type="image/png" sizes="16x16" href={favicon16.src} />
 <link rel="icon" type="image/png" sizes="32x32" href={favicon32.src} />
+<link rel="icon" type="image/png" sizes="48x48" href={favicon48.src} />
 
 <!-- Apple devices -->
 <link rel="apple-touch-icon" sizes="180x180" href={appleTouchIcon.src} />
