--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,14 +22,13 @@ const metadata = {
     type: 'website',
     images: [
       {
-        url: '~/assets/images/sauga-wellness-og.jpg',
+        url: '~/assets/images/sauga-wellness-og.svg',
         width: 1200,
         height: 630,
         alt: 'Sauga Wellness Foundation - Community Health Programs'
       }
     ],
   },
-
 };
 ---
 
