Update testimonial for Sahar Salman
Removed reference to 'racialized' communities in testimonial.

--- a/src/pages/involve.astro
+++ b/src/pages/involve.astro
@@ -146,7 +146,7 @@ const metadata = {
     title="Board of Directors"
     testimonials={[
       {
-        testimonial: `Sahar is a seasoned professional with a degree in Commerce and Economics and over two decades of experience in business and finance. She is a passionate advocate for community health and wellness. She leads with a vision of creating accessible and equitable health and wellness opportunities for all, particularly for marginalized and racialized communities.
+        testimonial: `Sahar is a seasoned professional with a degree in Commerce and Economics and over two decades of experience in business and finance. She is a passionate advocate for community health and wellness. She leads with a vision of creating accessible and equitable health and wellness opportunities for all, particularly for marginalized communities.
  As a Registered Holistic Nutritionist, she specializes in supporting individuals in addressing hormonal imbalances, anxiety, insomnia, digestive challenges, and burnout through safe and effective natural therapies. Her passion for empowering individuals and organizations through holistic care is matched by her commitment to fostering resilient, thriving communities.`,
         name: 'Sahar Salman',
         job: 'Chief Executive Officer | Registered Holistic Nutritionist',
